--- a/index.html
+++ b/index.html
@@ -2,70 +2,39 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Cook with Chrissy</title>
+		<title>Painter Jane Doe</title>
 		<link rel="stylesheet" type="text/css" href="styles.css">
 	</head>
 	<body>
 		<div class="wrapper">
 			<header>
-				<h1>Chrissy's Kitchen</h1>
+				<div id="logo">
+					<figure>
+						<img src="images/palette.jpg" alt="Cool image" />
+					</figure>
+				</div>
 				<nav>
 					<ul>
-						<li><a href="" class="current">Home</a></li>
-						<li><a href="">Classes</a></li>
-						<li><a href="">About</a></li>
-						<li><a href="">Contact</a></li>
-						<li><a href="">Blog</a></li>
+						<li><a href="#" class="on">Home</a></li>
+						<li><a href="#">About</a></li>
+						<li><a href="#">Portfolio</a></li>
+						<li><a href="#">Contact</a>
 					</ul>
 				</nav>
 			</header>
-			<section class="courses">
-				<a href="introduction.html">
-					<article>
-						<figure>
-							<img src=https://s-media-cache-ak0.pinimg.com/236x/eb/b1/fe/ebb1fe7569e850e24054142f8026448b.jpg />
-							<figcaption>Get your guac</figcaption>
-						</figure>
-						<hgroup>
-							<h2>How to Make Guacamole </h2>
-							<h3>A guide to fresh, healthy guac</h3>
-						</hgroup>
-						<p>From choosing the perfect avocado, to mixing in delicious ingredients, I show you how to master the art of guacamole. </p>
-					</article>
-				</a>
-				<a href="sauces.html">
-					<article>
-						<figure>
-							<img src="images/quinoa.jpg" alt="quinoa" />
-							<figcaption>Cooking with Quinoa</figcaption>
-						</figure>
-						<hgroup>
-							<h2>Quinoa Masterclass</h2>
-							<h3>One day workshop</h3>
-						</hgroup>
-						<p>An intensive one-day workshop to teach you how to master quinoa [KEEN-wah], a versatile superfood high in protein and fiber.</p>
-					</article>
-				</a>    
+			<section>
+				<!-- add one of my paintings here -->
+				<p>
+					<img src="http://i.huffpost.com/gen/2299606/images/n-STARRY-NIGHT-628x314.jpg" />
+				</p>
+				<p>
+					I paint pictures of beautiful things, and beautiful people. Check out my portfolio and <a href="#">Contact me</a> to buy beautiful artwork for your home or workplace.
+				</p>
 			</section>
-			<aside>
-				<section class="popular-recipes">
-					<h2>Popular Recipes</h2>
-					<a href="">Baked chicken</a>
-					<a href="">Super oatmeal</a>
-					<a href="">Kale and apple salad</a>
-					<a href="">Zucchini Pasta</a>
-				</section>
-				<section class="contact-details">
-					<h2>Contact</h2>
-					<p>Barnard College<br />
-						3009 Broadway<br />
-						New York<br />
-						NY 10027</p>
-				</section>
-			</aside>
 			<footer>
-				&copy; 2015 Chrissy's Kitchen. All Rights Reserved
+				&copy; 2014. Jane Doe Studios. Follow me on <a href="#">Twitter</a> and Instagram.
 			</footer>
-		</div><!-- .wrapper -->
+		</div>
 	</body>
 </html>
+
